tests/snapshots/lexer__reserved__backtick.snap
---
source: tests/lexer.rs
expression: "lex(\"`\")"
---
Err(
    LexError {
        message: "backtick is reserved for future interpolated strings",
        span: Span {
            start: 0,
            end: 1,
        },
    },
)
