tests/snapshots/lexer__reserved__dollar.snap
---
source: tests/lexer.rs
expression: "lex(\"$\")"
---
Err(
    LexError {
        message: "`$` is reserved for future interpolated strings",
        span: Span {
            start: 0,
            end: 1,
        },
    },
)
